@@ -31,6 +31,8 @@ Release 0.20.2 - Unreleased
    HBASE-1903  Enable DEBUG by default
    HBASE-1918  Don't do DNS resolving in .META. scanner for each row
    HBASE-1921  When the Master's session times out and there's only one, cluster is wedged
+   HBASE-1947  If HBase starts/stops often in less than 24 hours, 
+               you end up with lots of store files
 
 Release 0.20.1 - Released October 12th, 2009
   INCOMPATIBLE CHANGES
